--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sveltekit-2",
+	"name": "SvelteKit-Bundling-Analysis",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -7,15 +7,10 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"test": "playwright test",
-		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-vercel": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/cookie": "^0.5.1",
@@ -24,11 +19,13 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"sass": "^1.58.3",
 		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
+		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"vitest": "^0.25.3"
+		"tslib": "^2.4.1",
+		"vite": "^4.0.0"
 	},
 	"type": "module"
 }
