--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "SvelteKit-Bundling-Analysis",
+	"name": "SvelteKit-Bundle-Analysis",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"dev": "vite dev --port 4200",
+		"build": "vite build && node scripts/vercel-images",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
@@ -14,6 +14,8 @@
 		"@sveltejs/adapter-vercel": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/cookie": "^0.5.1",
+		"@types/node": "^18.14.6",
+		"dotenv": "^16.0.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -23,8 +25,8 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.1",
-		"typescript": "^4.9.3",
 		"tslib": "^2.4.1",
+		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
 	"type": "module"
